--- a/package.json
+++ b/package.json
@@ -10,8 +10,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.8.1",
-  "dependencies": {
-    "typescript": "^5.8.3"
-  }
+  "packageManager": "pnpm@10.9.0"
 }
