--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "tsx": "^4.19.3"
   }
 }
